# animus

./: .gitignore  CraneEBA2022_toc_pages.json  Microsoft Word - 20171101 Lendlease Building  CFMEU South Australia Enterprise Agreement 2017-2018_content.md  Microsoft Word - 20171101 Lendlease Building  CFMEU South Australia Enterprise Agreement 2017-2018_toc.md  UKparts.json  UKparts_updated.json  content.md  content_md_sections.md  formatted_sections.md  levels.json  main.py  main_cluster.py  main_embed.py  main_embed_trav.py  main_format.py  main_format_c.py  main_format_ma.py  main_gdb.py  main_gdb_create.py  main_llama_rank.py  main_search.py  main_tax.py  main_trav.py  main_trav_bad.py  master_toc.json  master_toc2.json  master_toc3.json  master_toc4_content.json  master_toc_vol_1 copy.json  master_toc_vol_1.json  master_toc_vol_1_old.json  parsed_content_9.json  parts.json  pyproject.toml  test.py  test2.py  test3.py  test4.py  test4_2.py  test4_3.py  (+35 more)
agents/: agent.py  traversal_agent.py
clustering/: __init__.py  local_embed.py  sk_cluster.py
formatters/: __init__.py  _format_tax.py  claude_formatter.py  code_formatter.py  gpt_formatter.py
gdb/: __init__.py  async_create_gdb.py  async_search_gdb.py  create_gdb.py  neo4j_conn.py  search_gdb.py
llm/: __init__.py  check_response.py  claude_api.py  groq_api.py  llama_rank.py  openai_api.py
parser/: base_parser.py  content_parser.py  pdf_parser.py  pdf_parser_2.py  pdf_parser_CA copy.py  pdf_parser_CA.py  pdf_parser_CT.py  pdf_parser_ToC.py  pdf_parser_gencontentchunk.py  pdf_parser_ogsplittoc.py  toc_parser.py  (+1 more)
(+41 files in other folders)
