[tool.poetry]
name = "animus"
version = "0.1.0"
description = ""
authors = ["qxd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pymupdf = "^1.24.4"
fastapi = "^0.111.0"
aiofiles = "^23.2.1"
tiktoken = "^0.7.0"
tenacity = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
